# RadioTelescopeDemo

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  config.docker.toml  config.example.toml  docker-compose.yml  docker-entrypoint.sh  events.jsonl  motion.jsonl  passwords.example.txt  pyproject.toml
.claude/: launch.json
.pytest-tmp/test_capture_baseline_integrat0/: spectrum_baseline.f32
audits/: complexity-audit-2026-05-19.md  complexity-audit.md  duplication-audit.md  technical-debt.md
docs/: api.md  goes-mode.md  separation-plan.md
frontend/: .gitignore  index.html  package-lock.json  package.json
frontend/dist-static/: index.html
frontend/dist-static/assets/: PreLaunchPage-GHCwcEtt.js  PreLaunchPage-GHCwcEtt.js.map  index-B72j-3RB.css  index-CyLZe1jw.js  index-CyLZe1jw.js.map
frontend/public/: rt-env.js
frontend/scripts/: render-doppler-frames.mjs
frontend/src/: LiveShell.tsx  PreLaunchPage.tsx  analytics.ts  api.ts  branding.ts  main.tsx  queue.ts  tour.ts  types.ts
frontend/src/components/: BaselineWizard.tsx  DopplerRenderHarness.tsx  InfoSection.tsx  MobileHint.tsx  MotionControls.tsx  QueuePage.tsx  SkyMap.tsx  SpectrumPanel.tsx  StarsBackground.tsx  TelemetryDashboard.tsx  TopBar.tsx
frontend/src/data/: queueSpectrum.txt
frontend/src/lib/: astro.ts  formatters.ts  useBackendCatalog.ts  useErrorTracking.ts  useFullscreen.ts  useJsonSocket.ts  useLna.ts  useMapTarget.ts  useMotionCommands.ts  useQueueLease.ts  useTelemetry.ts
frontend/src/styles/: main.css
frontend/src/types/: aladin-lite.d.ts
hardware/: Dockerfile  config.dev.toml  config.example.toml  docker-compose.yml  pyproject.toml
hardware/src/rt_hardware/: config.py  geometry.py  main.py  safety.py  sdr_pipeline.py
hardware/src/rt_hardware/api/: routes_camera.py  routes_goes.py  routes_roboclaw.py  routes_spectrum.py
hardware/src/rt_hardware/goes/: products.py
hardware/src/rt_hardware/hardware/: sdr.py
hardware/src/rt_hardware/models/: state.py
hardware/src/rt_hardware/scripts/: dump_types.py
hardware/src/rt_hardware/services/: _sdr_task.py  camera.py  roboclaw.py  spectrum.py  spectrum_rfi.py
hardware/tests/: conftest.py  fake_roboclaw.py  test_api.py  test_config.py  test_goes_api.py  test_roboclaw_service.py  test_sdr_pipeline.py  test_spectrum_service.py
infra/: README.md  deploy.env  secrets.example.env
infra/caddy/: Caddyfile.live  Caddyfile.pre-launch
infra/nginx/: telescope.conf
infra/systemd/: radiotelescope.service  rt-hardware.service  rt-platform.service
platform/: Dockerfile  auth_events.jsonl  config.dev.toml  config.docker.toml  config.example.toml  docker-compose.yml  docker-entrypoint.sh  events.jsonl  feedback.jsonl  motion.jsonl
platform/frontend/: DownloadFITS.sh  package-lock.json  package.json
platform/frontend/scripts/: colorize_hips.py
platform/frontend/src/: App.tsx  analytics.ts  api.ts  guidedObservation.ts  tour.ts  types.gen.ts  types.ts
platform/src/rt_platform/: config.py  loki.py  main.py
platform/tests/: conftest.py  test_goes_proxy.py  test_public_config.py  test_queue.py
scripts/: deploy.sh
src/radiotelescope/: config.py  geometry.py  main.py
src/radiotelescope/api/: auth.py  dependencies.py  log_files.py  rate_limit.py  routes_events.py  routes_feedback.py  routes_iq.py  routes_queue.py  routes_roboclaw.py  routes_spectrum.py  routes_spectrum_proxy.py
tests/: conftest.py  fake_roboclaw.py  test_api.py  test_config.py  test_queue.py  test_roboclaw_driver.py  test_roboclaw_service.py
(+1094 files in other folders)
