[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "radiotelescope"
version = "0.1.0"
description = "RoboClaw web controller"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.0",
    "pyserial>=3.5",
    "katpoint>=0.10",
    "httpx>=0.27",
    "itsdangerous>=2.2",
    "python-multipart>=0.0.9",
    "numpy>=1.26",
    # SoapySDR's Python bindings are installed via the system package
    # `python3-soapysdr` (with `soapysdr-module-airspy` for the Airspy
    # driver) — they aren't on PyPI, so they're intentionally NOT listed
    # here. See CLAUDE.md "Hardware Notes" for the apt install command.
    # Used by SpectrumBridge (gateway-client mode) to subscribe to the Pi's
    # /ws/spectrum upstream. Already a transitive dep via uvicorn[standard];
    # pinned here so the import in services/spectrum_bridge.py is explicit.
    "websockets>=12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[project.scripts]
radiotelescope = "radiotelescope.main:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
