[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rt-hardware"
version = "0.1.0"
description = "RadioTelescope hardware service (motors, SDR, camera)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.0",
    "pyserial>=3.5",
    "katpoint>=0.10",
    "numpy>=1.26",
    "opencv-python-headless>=4.8",
    # SoapySDR's Python bindings are installed via the system package
    # `python3-soapysdr` (with `soapysdr-module-airspy` for the Airspy driver) —
    # they aren't on PyPI, so they're intentionally NOT listed here. See the
    # Dockerfile / repo README for the apt install command.
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[project.scripts]
rt-hardware = "rt_hardware.main:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
