[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rt-hardware"
version = "0.1.0"
description = "RadioTelescope hardware service (motors, SDR, camera)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.0",
    "pyserial>=3.5",
    "katpoint>=0.10",
    "numpy>=1.26",
    "opencv-python-headless>=4.8",
    "pyzmq>=25.0",
    # GNU Radio + gr-soapy provide the DSP subprocess (FFT, integrate, ZMQ sink).
    # Both, along with SoapySDR + the Airspy driver, are installed via apt;
    # their Python bindings aren't on PyPI.
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[project.scripts]
rt-hardware = "rt_hardware.main:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# Fallback goesproc handler config for GOES mode.
"rt_hardware.goes" = ["*.conf"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
